--- a/pages/signin/signin.html
+++ b/pages/signin/signin.html
@@ -57,7 +57,7 @@
         <a href="../../index.html" class="white">Voyage Inn.</a>
       </div>
       <ul>
-        <li><a href="" class="link mr-2">Home</a></li>
+        <li><a href="../../index.html" class="link mr-2">Home</a></li>
         <li><a href="" class="link mr-2">Reserve</a></li>
         <li><a href="" class="link mr-2">Overview</a></li>
         <li><a href="" class="link mr-2">Offers</a></li>
@@ -99,11 +99,13 @@
             font-size: 1.2rem;
             border-radius: 8px;
           "
+          id="signin-btn"
+          onclick=""
         >
-          Sign up
+          Sign in
         </button>
       </form>
     </main>
   </body>
-  <script src="main.js"></script>
+  <script src="../../auth.js"></script>
 </html>
