--- a/pages/signup/signup.html
+++ b/pages/signup/signup.html
@@ -57,7 +57,7 @@
         <a href="../../index.html" class="white">Voyage Inn.</a>
       </div>
       <ul>
-        <li><a href="" class="link mr-2">Home</a></li>
+        <li><a href="../../index.html" class="link mr-2">Home</a></li>
         <li><a href="" class="link mr-2">Reserve</a></li>
         <li><a href="" class="link mr-2">Overview</a></li>
         <li><a href="" class="link mr-2">Offers</a></li>
