--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./main.css" />
-    <link rel="stylesheet" href="/pages/main/main-2.css" />
+    <link rel="stylesheet" href="./pages/main/main-2.css" />
     <title>Voyage Inn.</title>
   </head>
   <body class="bg-black">
@@ -85,20 +85,20 @@
                 data-target="#destinationModal"
               >
                 <img
-                  src="./static/icons/destination.svg"
+                  src="static/icons/destination.svg"
                   alt="destination"
                   class="icon"
                 />
                 <span>Destination</span>
                 <img
-                  src="./static/icons/arrow-down.svg"
+                  src="static/icons/arrow-down.svg"
                   alt="arrow"
                   class="icon-2"
                 />
               </div>
               <div id="check-in" class="field-box">
                 <img
-                  src="./static/icons/calendar.svg"
+                  src="static/icons/calendar.svg"
                   alt="calendar"
                   class="icon"
                 />
@@ -121,7 +121,7 @@
               </div>
               <div id="check-out" class="field-box">
                 <img
-                  src="./static/icons/calendar.svg"
+                  src="static/icons/calendar.svg"
                   alt="calendar"
                   class="icon"
                 />
@@ -147,10 +147,10 @@
                 data-toggle="modal"
                 data-target="#occupancyModal"
               >
-                <img src="./static/icons/user.svg" alt="user" class="icon" />
+                <img src="/static/icons/user.svg" alt="user" class="icon" />
                 <span>Guests</span>
                 <img
-                  src="./static/icons/arrow-down.svg"
+                  src="/static/icons/arrow-down.svg"
                   alt="arrow"
                   class="icon-2"
                 />
