--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
                 data-toggle="modal"
                 data-target="#occupancyModal"
               >
-                <img src="/static/icons/user.svg" alt="user" class="icon" />
+                <img src="static/icons/user.svg" alt="user" class="icon" />
                 <span>Guests</span>
                 <img
-                  src="/static/icons/arrow-down.svg"
+                  src="static/icons/arrow-down.svg"
                   alt="arrow"
                   class="icon-2"
                 />
