--- a/pages/account/dc-account.html
+++ b/pages/account/dc-account.html
@@ -83,72 +83,54 @@
         <h3>Personal Info</h3>
         <div class="section-1">
           <div class="paper" style="width: 100%">
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
+            <div class="field"><span>Employee ID:</span><span>int</span></div>
+            <div class="field"><span>Position:</span><span>int</span></div>
             <div class="field"><span>Member number:</span><span>int</span></div>
             <div class="field"><span>Member number:</span><span>int</span></div>
             <div class="field"><span>Member number:</span><span>int</span></div>
             <div class="field"><span>Member number:</span><span>int</span></div>
           </div>
         </div>
-        <h3>Bookings</h3>
+        <h3>Bookings requests</h3>
         <div class="section-2">
-          <div class="paper">
-            <h4>Present</h4>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-          </div>
-          <div class="paper">
-            <h4>Present</h4>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-          </div>
-
-          <div class="paper">
-            <h4 class="blue">Upcoming</h4>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-          </div>
-
-          <div class="paper">
-            <h4 class="blue">Upcoming</h4>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-          </div>
-          <div class="paper">
-            <h4 class="red">Past</h4>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-          </div>
-
-          <div class="paper">
-            <h4 class="red">Past</h4>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
+          <div class="paper" style="width: 100%">
+            <p style="font-size: 1.2rem">
+              <span style="font-weight: 700; margin-right: 0.5rem"
+                >Guest name:</span
+              >
+              Asset
+            </p>
+            <div class="bg-blue">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">Hotel ID</th>
+                    <th scope="col">Check-in</th>
+                    <th scope="col">Check-out</th>
+                    <th scope="col">Guests</th>
+                    <th scope="col">Floor</th>
+                    <th scope="col">Room type</th>
+                    <th scope="col">Room number</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                    <td>@mdo</td>
+                    <td>@mdo</td>
+                    <td>@mdo</td>
+                    <td>@mdo</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="btnBox">
+              <button class="btn btn-secondary">Edit</button
+              ><button class="btn btn-danger">Cancel</button
+              ><button class="btn btn-primary">Create</button>
+            </div>
           </div>
         </div>
       </div>
