--- a/pages/signin/signin.html
+++ b/pages/signin/signin.html
@@ -90,11 +90,18 @@
             placeholder="password"
           />
         </div>
+        <label>Which user?</label>
+        <select id="#select-user" class="form-control">
+          <option value="User">User</option>
+          <option value="Desk clerk">Desk clerk</option>
+          <option value="Manager">Manager</option>
+        </select>
         <button
           type="button"
           class="btn btn-primary"
           style="
             margin-left: 40%;
+            margin-top: 3rem;
             width: 20%;
             font-size: 1.2rem;
             border-radius: 8px;
