--- a/pages/account/manager-account.html
+++ b/pages/account/manager-account.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous" 
+      crossorigin="anonymous"
     /> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -83,72 +83,44 @@
         <h3>Personal Info</h3>
         <div class="section-1">
           <div class="paper" style="width: 100%">
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
+            <div class="field"><span>Employee ID:</span><span>int</span></div>
+            <div class="field"><span>Position:</span><span>int</span></div>
             <div class="field"><span>Member number:</span><span>int</span></div>
             <div class="field"><span>Member number:</span><span>int</span></div>
             <div class="field"><span>Member number:</span><span>int</span></div>
             <div class="field"><span>Member number:</span><span>int</span></div>
           </div>
         </div>
-        <h3>Bookings</h3>
+        <h3>Employees</h3>
         <div class="section-2">
-          <div class="paper">
-            <h4>Present</h4>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-          </div>
-          <div class="paper">
-            <h4>Present</h4>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-          </div>
-
-          <div class="paper">
-            <h4 class="blue">Upcoming</h4>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-          </div>
-
-          <div class="paper">
-            <h4 class="blue">Upcoming</h4>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-          </div>
-          <div class="paper">
-            <h4 class="red">Past</h4>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-          </div>
-
-          <div class="paper">
-            <h4 class="red">Past</h4>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
+          <div class="paper" style="width: 100%">
+            <p style="font-size: 1.2rem">
+              <span style="font-weight: 700; margin-right: 0.5rem"
+                >Employee name:</span
+              >
+              Asset
+            </p>
+            <div class="bg-blue">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">Work days</th>
+                    <th scope="col">Work hours</th>
+                    <th scope="col">Payroll</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="btnBox">
+              <button class="btn btn-secondary">Adjust</button
+            </div>
           </div>
         </div>
       </div>
