--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <a href="">Offers</a>
             <a href="">Contact us</a>
             <div class="flex">
-                <a href="./pages/signup/sign-up.html"
-                   class="blue">Sign up</a>
+                <a href="./pages/signup/signup.html"
+                   class="blue">Join</a>
                 <span class="separator">|</span>
-                <a href="./pages/signin/sign-in.html"
+                <a href="./pages/signin/signin.html"
                    class="blue">Sign in</a>
             </div>
         </nav>
