Added Overview, Offers, Contact us pages

--- a/pages/contact-us/contact-us.html
+++ b/pages/contact-us/contact-us.html
@@ -38,9 +38,11 @@
               integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
               crossorigin="anonymous" />
         <link rel="stylesheet"
-              href="../../main.css" />
+              href="/Software-Engineering-Hotel-Chain/main.css" />
         <link rel="stylesheet"
-              href="../signin/signin.css" />
+              href="/Software-Engineering-Hotel-Chain/pages/main/main-2.css" />
+        <link rel="stylesheet"
+              href="/Software-Engineering-Hotel-Chain/pages/signin/signin.css" />
         <title>Voyage Inn</title>
         <link rel="shortcut icon"
               href="/Software-Engineering-Hotel-Chain/static/icons/voyage-inn.png"
@@ -68,91 +70,94 @@
                 </li>
                 <li>
                     <a href="/Software-Engineering-Hotel-Chain/pages/contact-us/contact-us.html"
-                       class="link mr-2">Contact us</a>
+                       class="active link mr-2">Contact
+                        us</a>
                 </li>
                 <div class="flex">
                     <li>
-                        <a href=""
-                           class="link active">Join</a>
+                        <a href="/Software-Engineering-Hotel-Chain/pages/signup/signup.html"
+                           class="link blue">Join</a>
                     </li>
                     <span
                           style="color: white; margin: 0 4px">|</span>
                     <li>
                         <a href="/Software-Engineering-Hotel-Chain/pages/signin/signin.html"
-                           class="link">Sign in</a>
+                           class="link blue">Sign in</a>
                     </li>
                 </div>
             </ul>
         </header>
         <main class="main">
-            <form class="paper">
-                <h3 class="paper-label">Sign up</h3>
-                <div class="form-group">
-                    <label for="formGroupExampleInput">First
-                        name</label>
-                    <input type="text"
-                           class="form-control"
-                           id="formGroupExampleInput"
-                           placeholder="Asset" />
+            <div class="container"
+                 style="display: grid;
+                 grid-template-columns: 40% 60%;">
+                <div class="card my-2"
+                     style="border-radius: 8px !important;
+                     grid-column: 1;
+                     grid-row: 1">
+                    <div class="card-body">
+                        <h2 class="card-title">Contact us by
+                        </h2>
+                        <p class="card-text">
+                            <img class="icon"
+                                 src="/Software-Engineering-Hotel-Chain/static/icons/email.svg"
+                                 alt="Email icon">
+                            email@example.com
+                        </p>
+                        <p class="card-text">
+                            <img class="icon"
+                                 src="/Software-Engineering-Hotel-Chain/static/icons/phone.svg"
+                                 alt="Phone icon">
+                            +1 (111) 111-11-11
+                        </p>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="formGroupExampleInput2">Last
-                        name</label>
-                    <input type="text"
-                           class="form-control"
-                           id="formGroupExampleInput2"
-                           placeholder="Kazkenov" />
-                </div>
-                <div class="form-group">
-                    <label
-                           for="formGroupExampleInput2">Email</label>
-                    <input type="text"
-                           class="form-control"
-                           id="formGroupExampleInput2"
-                           placeholder="asset.kazkenov@gmail.com" />
-                </div>
-                <div class="form-group">
-                    <label
-                           for="formGroupExampleInput2">Password</label>
-                    <input type="password"
-                           class="form-control"
-                           id="password1"
-                           placeholder="password" />
-                </div>
-                <div class="form-group">
-                    <label
-                           for="formGroupExampleInput2">Password
-                        confirmation</label>
-                    <input type="password"
-                           class="form-control"
-                           id="password2"
-                           placeholder="password" />
-                </div>
-                <div
-                     class="custom-control custom-checkbox mb-3">
-                    <input type="checkbox"
-                           class="custom-control-input"
-                           id="customControlValidation1"
-                           required="required" />
-                    <label class="custom-control-label"
-                           for="customControlValidation1">Agree
-                        with our Terms & Conditions</label>
-                    <div class="invalid-feedback">Example
-                        invalid feedback text</div>
-                </div>
-                <button type="button"
-                        class="btn btn-primary"
-                        style="
-            margin-left: 40%;
-            width: 20%;
-            font-size: 1.2rem;
-            border-radius: 8px;
-          ">
-                    Sign up
-                </button>
-            </form>
+                <form class="paper"
+                      style="grid-column: 2;
+                      grid-row: 1/3;
+                      margin-top: 0.7em !important;">
+                    <h3 class="paper-label">Or, leave
+                        contacts below so we can arrange an
+                        appointment
+                    </h3>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text"
+                               class="form-control"
+                               id="name" />
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email"
+                               class="form-control"
+                               id="email" />
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Phone
+                            number</label>
+                        <input type="tel"
+                               class="form-control"
+                               id="phone" />
+                    </div>
+                    <button type="button"
+                            class="btn btn-primary"
+                            style="
+                            margin-left: 40%;
+                            margin-top: 3rem;
+                            width: 20%;
+                            font-size: 1.2rem;
+                            border-radius: 8px;
+                        "
+                            id="signin-btn"
+                            onclick="">
+                        Submit
+                    </button>
+                </form>
+                <img style="border-radius: 8px; grid-column: 1; grid-row: 2; width: 100%;"
+                     src="/Software-Engineering-Hotel-Chain/static/images/RMO_Facade_22 1.png"
+                     alt="Hotel facade">
+            </div>
         </main>
     </body>
-    <script src="main.js"></script>
 
 </html>
