--- a/pages/signin/signin.html
+++ b/pages/signin/signin.html
@@ -1,118 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    /> -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"
-    />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css"
-    />
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible"
+              content="IE=edge" />
+        <meta name="viewport"
+              content="width=device-width, initial-scale=1.0" />
+        <!-- <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+        crossorigin="anonymous" /> -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+                integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+                crossorigin="anonymous"></script>
+        <script
+                src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js">
+        </script>
+        <link rel="stylesheet"
+              href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
 
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../../main.css" />
-    <link rel="stylesheet" href="./signin.css" />
-    <title>Voyage Inn.</title>
-  </head>
-  <body class="bg-black">
-    <header class="header">
-      <div class="logo">
-        <a href="../../index.html" class="white">Voyage Inn.</a>
-      </div>
-      <ul>
-        <li><a href="../../index.html" class="link mr-2">Home</a></li>
-        <li><a href="" class="link mr-2">Reserve</a></li>
-        <li><a href="" class="link mr-2">Overview</a></li>
-        <li><a href="" class="link mr-2">Offers</a></li>
-        <li><a href="" class="link mr-2">Contact us</a></li>
-        <div class="flex">
-          <li><a href="../signup/signup.html" class="link">Join</a></li>
-          <span style="color: white; margin: 0 4px">|</span>
-          <li><a href="" class="link active">Sign in</a></li>
-        </div>
-      </ul>
-    </header>
-    <main class="main">
-      <form class="paper">
-        <h3 class="paper-label">Sign in</h3>
-        <div class="form-group">
-          <label for="formGroupExampleInput2">Email</label>
-          <input
-            type="text"
-            class="form-control"
-            id="formGroupExampleInput2"
-            placeholder="asset.kazkenov@gmail.com"
-          />
-        </div>
-        <div class="form-group">
-          <label for="formGroupExampleInput2">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="password1"
-            placeholder="password"
-          />
-        </div>
-        <label>Which user?</label>
-        <select id="#select-user" class="form-control">
-          <option value="User">User</option>
-          <option value="Desk clerk">Desk clerk</option>
-          <option value="Manager">Manager</option>
-        </select>
-        <button
-          type="button"
-          class="btn btn-primary"
-          style="
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css" />
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+                integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+                crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+                integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+                crossorigin="anonymous"></script>
+        <link rel="stylesheet"
+              href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+              integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+              crossorigin="anonymous" />
+        <link rel="stylesheet"
+              href="../../main.css" />
+        <link rel="stylesheet"
+              href="./signin.css" />
+        <title>Voyage Inn</title>
+        <link rel="shortcut icon"
+              href="../../static/icons/voyage-inn.png"
+              type="image/x-icon">
+    </head>
+
+    <body class="bg-black">
+        <header class="header">
+            <div class="logo">
+                <a href="/Software-Engineering-Hotel-Chain/index.html"
+                   class="white">Voyage Inn</a>
+            </div>
+            <ul>
+                <li>
+                    <a href="/Software-Engineering-Hotel-Chain/index.html"
+                       class="link mr-2">Home</a>
+                </li>
+                <li>
+                    <a href="/Software-Engineering-Hotel-Chain/pages/overview/overview.html"
+                       class="link mr-2">Overview</a>
+                </li>
+                <li>
+                    <a href="/Software-Engineering-Hotel-Chain/pages/offers/offers.html"
+                       class="link mr-2">Offers</a>
+                </li>
+                <li>
+                    <a href="/Software-Engineering-Hotel-Chain/pages/contact-us/contact-us.html"
+                       class="link mr-2">Contact us</a>
+                </li>
+                <div class="flex">
+                    <li>
+                        <a href="/Software-Engineering-Hotel-Chain/pages/signup/signup.html"
+                           class="link">Join</a>
+                    </li>
+                    <span
+                          style="color: white; margin: 0 4px">|</span>
+                    <li>
+                        <a href=""
+                           class="link active">Sign in</a>
+                    </li>
+                </div>
+            </ul>
+        </header>
+        <main class="main">
+            <form class="paper">
+                <h3 class="paper-label">Sign in</h3>
+                <div class="form-group">
+                    <label
+                           for="formGroupExampleInput2">Email</label>
+                    <input type="text"
+                           class="form-control"
+                           id="formGroupExampleInput2"
+                           placeholder="asset.kazkenov@gmail.com" />
+                </div>
+                <div class="form-group">
+                    <label
+                           for="formGroupExampleInput2">Password</label>
+                    <input type="password"
+                           class="form-control"
+                           id="password1"
+                           placeholder="password" />
+                </div>
+                <label>Which user?</label>
+                <select id="#select-user"
+                        class="form-control">
+                    <option value="User">User</option>
+                    <option value="Desk clerk">Desk clerk
+                    </option>
+                    <option value="Manager">Manager</option>
+                </select>
+                <button type="button"
+                        class="btn btn-primary"
+                        style="
             margin-left: 40%;
             margin-top: 3rem;
             width: 20%;
             font-size: 1.2rem;
             border-radius: 8px;
           "
-          id="signin-btn"
-          onclick=""
-        >
-          Sign in
-        </button>
-      </form>
-    </main>
-  </body>
-  <script src="../../auth.js"></script>
+                        id="signin-btn"
+                        onclick="">
+                    Sign in
+                </button>
+            </form>
+        </main>
+    </body>
+    <script src="../../auth.js"></script>
+
 </html>
