--- a/pages/offers/offers.html
+++ b/pages/offers/offers.html
@@ -38,47 +38,47 @@
               integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
               crossorigin="anonymous" />
         <link rel="stylesheet"
-              href="/Software-Engineering-Hotel-Chain/main.css" />
+              href="../../main.css" />
         <link rel="stylesheet"
-              href="/Software-Engineering-Hotel-Chain/pages/main/main-2.css" />
+              href="../main/main-2.css" />
         <title>Voyage Inn</title>
         <link rel="shortcut icon"
-              href="/Software-Engineering-Hotel-Chain/static/icons/voyage-inn.png"
+              href="../../static/icons/voyage-inn.png"
               type="image/x-icon">
     </head>
 
     <body class="bg-black">
         <header class="header">
             <div class="logo">
-                <a href="/Software-Engineering-Hotel-Chain/index.html"
+                <a href="../../index.html"
                    class="white">Voyage Inn</a>
             </div>
             <ul>
                 <li>
-                    <a href="/Software-Engineering-Hotel-Chain/index.html"
+                    <a href="../../index.html"
                        class="link mr-2">Home</a>
                 </li>
                 <li>
-                    <a href="/Software-Engineering-Hotel-Chain/pages/overview/overview.html"
+                    <a href="../overview/overview.html"
                        class="link mr-2">Overview</a>
                 </li>
                 <li>
-                    <a href="/Software-Engineering-Hotel-Chain/pages/offers/offers.html"
+                    <a href="../offers/offers.html"
                        class="active link mr-2">Offers</a>
                 </li>
                 <li>
-                    <a href="/Software-Engineering-Hotel-Chain/pages/contact-us/contact-us.html"
+                    <a href="../contact-us/contact-us.html"
                        class="link mr-2">Contact us</a>
                 </li>
                 <div class="flex">
                     <li>
-                        <a href="/Software-Engineering-Hotel-Chain/pages/signup/signup.html"
+                        <a href="../signup/signup.html"
                            class="link blue">Join</a>
                     </li>
                     <span
                           style="color: white; margin: 0 4px">|</span>
                     <li>
-                        <a href="/Software-Engineering-Hotel-Chain/pages/signin/signin.html"
+                        <a href="../signin/signin.html"
                            class="link blue">Sign in</a>
                     </li>
                 </div>
@@ -92,7 +92,7 @@
                 <div style="grid-column: 1;
                 grid-row: 1;">
                     <img style="width: 90%;"
-                         src="/Software-Engineering-Hotel-Chain/static/images/50623685-RCP_9617 1.png"
+                         src="../../static/images/50623685-RCP_9617 1.png"
                          alt="Fine dining">
                     <a class="link"
                        style="position: relative;
@@ -106,7 +106,7 @@
                 <div style="grid-column: 2;
                 grid-row: 1;">
                     <img style="width: 90%;"
-                         src="/Software-Engineering-Hotel-Chain/static/images/alarz-altitude-50687025 1.png"
+                         src="../../static/images/alarz-altitude-50687025 1.png"
                          alt="Dream wedding">
                     <a class="link"
                        style="position: relative;
@@ -120,7 +120,7 @@
                 <div style="grid-column: 3;
                 grid-row: 1;">
                     <img style="width: 90%;"
-                         src="/Software-Engineering-Hotel-Chain/static/images/RCDENVR_00233 1.png"
+                         src="../../static/images/RCDENVR_00233 1.png"
                          alt="Romantic getaway">
                     <a class="link"
                        style="position: relative;
@@ -134,7 +134,7 @@
                 <div style="grid-column: 1;
                 grid-row: 2;">
                     <img style="width: 90%;"
-                         src="/Software-Engineering-Hotel-Chain/static/images/welcome_parkhotel_euskirchen_ballsaal_b_06 1.png"
+                         src="../../static/images/welcome_parkhotel_euskirchen_ballsaal_b_06 1.png"
                          alt="Conference rooms">
                     <a class="link"
                        style="position: relative;
@@ -148,7 +148,7 @@
                 <div style="grid-column: 2;
                 grid-row: 2;">
                     <img style="width: 90%;"
-                         src="/Software-Engineering-Hotel-Chain/static/images/d41ae4d2094a139eb9b42838a192a211 1.png"
+                         src="../../static/images/d41ae4d2094a139eb9b42838a192a211 1.png"
                          alt="Spa">
                     <a class="link"
                        style="position: relative;
@@ -162,7 +162,7 @@
                 <div style="grid-column: 3;
                 grid-row: 2;">
                     <img style="width: 90%;"
-                         src="/Software-Engineering-Hotel-Chain/static/images/Gym 1.png"
+                         src="../../static/images/Gym 1.png"
                          alt="Gym">
                     <a class="link"
                        style="position: relative;
