--- a/pages/overview/overview.html
+++ b/pages/overview/overview.html
@@ -1,207 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible"
-              content="IE=edge" />
-        <meta name="viewport"
-              content="width=device-width, initial-scale=1.0" />
-        <!-- <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
         crossorigin="anonymous" /> -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-                integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-                crossorigin="anonymous"></script>
-        <script
-                src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js">
-        </script>
-        <link rel="stylesheet"
-              href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"
+    />
 
-        <link rel="stylesheet"
-              href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css"
+    />
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-                integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-                crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-                integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-                crossorigin="anonymous"></script>
-        <link rel="stylesheet"
-              href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-              integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-              crossorigin="anonymous" />
-        <link rel="stylesheet"
-              href="/Software-Engineering-Hotel-Chain/main.css" />
-        <link rel="stylesheet"
-              href="/Software-Engineering-Hotel-Chain/pages/main/main-2.css" />
-        <title>Voyage Inn</title>
-        <link rel="shortcut icon"
-              href="/Software-Engineering-Hotel-Chain/static/icons/voyage-inn.png"
-              type="image/x-icon">
-    </head>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../../main.css" />
+    <link rel="stylesheet" href="../main/main-2.css" />
+    <title>Voyage Inn</title>
+    <link
+      rel="shortcut icon"
+      href="../../static/icons/voyage-inn.png"
+      type="image/x-icon"
+    />
+  </head>
 
-    <body class="bg-black">
-        <header class="header">
-            <div class="logo">
-                <a href="/Software-Engineering-Hotel-Chain/index.html"
-                   class="white">Voyage Inn</a>
-            </div>
-            <ul>
-                <li>
-                    <a href="/Software-Engineering-Hotel-Chain/index.html"
-                       class="link mr-2">Home</a>
-                </li>
-                <li>
-                    <a href="/Software-Engineering-Hotel-Chain/pages/overview/overview.html"
-                       class="active link mr-2">Overview</a>
-                </li>
-                <li>
-                    <a href="/Software-Engineering-Hotel-Chain/pages/offers/offers.html"
-                       class="link mr-2">Offers</a>
-                </li>
-                <li>
-                    <a href="/Software-Engineering-Hotel-Chain/pages/contact-us/contact-us.html"
-                       class="link mr-2">Contact us</a>
-                </li>
-                <div class="flex">
-                    <li>
-                        <a href="/Software-Engineering-Hotel-Chain/pages/signup/signup.html"
-                           class="link blue">Join</a>
-                    </li>
-                    <span
-                          style="color: white; margin: 0 4px">|</span>
-                    <li>
-                        <a href="/Software-Engineering-Hotel-Chain/pages/signin/signin.html"
-                           class="link blue">Sign in</a>
-                    </li>
-                </div>
-            </ul>
-        </header>
-        <main class="main">
-            <div class="container mt-4"
-                 style="display: grid;
-                grid-template-columns: 50% 50%;
-                grid-gap: 20px;">
-                <img style="border-radius: 8px;
-                    grid-column: 1;
-                    grid-row: 1/3;
-                    width: 100%;"
-                     src="/Software-Engineering-Hotel-Chain/static/images/otwin0ycalthewjffpea 1.png"
-                     alt="Hotel pool and yard">
-                <div class="text-light"
-                     style="border-radius: 8px;
-                    grid-column: 2;
-                    grid-row: 1;
-                    width: 100%;">
-                    Info about the hotel chain. List of
-                    countries were we have
-                    hotels.
-                </div>
-                <div class="text-light"
-                     style="border-radius: 8px;
-               grid-column: 2;
-               grid-row: 2;
-               width: 100%;">
-                    A gallery.
-                </div>
-            </div>
-            <div class="container mt-3"
-                 style="display: grid;
-                grid-template-columns: 10% 90%;
-                grid-gap: 20px;">
-                <div class="bg-white text-black"
-                     style="align-items: center;
-                     border-radius: 50%;
-                     display: flex;
-                     font-size: x-large;
-                     font-weight: 700;
-                     grid-column: 1;
-                     grid-row: 1;
-                     height: 75px;
-                     justify-content: center;
-                     width: 75px;">
-                    1
-                </div>
-                <div class="text-light"
-                     style="border-radius: 8px;
-                    grid-column: 2;
-                    grid-row: 1;
-                    width: 100%;">
-                    <h2>Making change easier
-                    </h2>
-                    <p>Our bookings can be changed without
-                        charge and most rates
-                        are able to be canceled without
-                        penalty.</p>
-                </div>
-            </div>
-            <div class="container mt-3"
-                 style="display: grid;
-                grid-template-columns: 90% 10%;
-                grid-gap: 20px;">
-                <div class="text-light"
-                     style="border-radius: 8px;
-                    grid-column: 1;
-                    grid-row: 1;
-                    width: 100%;">
-                    <h2>Your health, safety, and well-being
-                    </h2>
-                    <p>All our hotels are required to adhere
-                        to comprehensive
-                        health and safety procedures
-                        including all local laws.</p>
-                </div>
-                <div class="bg-white text-black"
-                     style="align-items: center;
-                     border-radius: 50%;
-                     display: flex;
-                     font-size: x-large;
-                     font-weight: 700;
-                     grid-column: 2;
-                     grid-row: 1;
-                     height: 75px;
-                     justify-content: center;
-                     width: 75px;">
-                    2
-                </div>
-            </div>
-            <div class="container mt-3"
-                 style="display: grid;
-                grid-template-columns: 10% 90%;
-                grid-gap: 20px;">
-                <div class="bg-white text-black"
-                     style="align-items: center;
-                     border-radius: 50%;
-                     display: flex;
-                     font-size: x-large;
-                     font-weight: 700;
-                     grid-column: 1;
-                     grid-row: 1;
-                     height: 75px;
-                     justify-content: center;
-                     width: 75px;">
-                    3
-                </div>
-                <div class="text-light"
-                     style="border-radius: 8px;
-                    grid-column: 2;
-                    grid-row: 1;
-                    width: 100%;">
-                    <h2>Flexible Plans
-                    </h2>
-                    <p>Flexible booking options help you
-                        amend your plans as
-                        things change.</p>
-                </div>
-            </div>
-        </main>
-    </body>
-
+  <body class="bg-black">
+    <header class="header">
+      <div class="logo">
+        <a href="../../index.html" class="white">Voyage Inn</a>
+      </div>
+      <ul>
+        <li>
+          <a href="../../index.html" class="link mr-2">Home</a>
+        </li>
+        <li>
+          <a href="../overview/overview.html" class="active link mr-2"
+            >Overview</a
+          >
+        </li>
+        <li>
+          <a href="../offers/offers.html" class="link mr-2">Offers</a>
+        </li>
+        <li>
+          <a href="../contact-us/contact-us.html" class="link mr-2"
+            >Contact us</a
+          >
+        </li>
+        <div class="flex">
+          <li>
+            <a href="../signup/signup.html" class="link blue">Join</a>
+          </li>
+          <span style="color: white; margin: 0 4px">|</span>
+          <li>
+            <a href="../signin/signin.html" class="link blue">Sign in</a>
+          </li>
+        </div>
+      </ul>
+    </header>
+    <main class="main">
+      <div
+        class="container mt-4"
+        style="display: grid; grid-template-columns: 50% 50%; grid-gap: 20px"
+      >
+        <img
+          style="border-radius: 8px; grid-column: 1; grid-row: 1/3; width: 100%"
+          src="../../static/images/otwin0ycalthewjffpea 1.png"
+          alt="Hotel pool and yard"
+        />
+        <div
+          class="text-light"
+          style="border-radius: 8px; grid-column: 2; grid-row: 1; width: 100%"
+        >
+          Info about the hotel chain. List of countries were we have hotels.
+        </div>
+        <div
+          class="text-light"
+          style="border-radius: 8px; grid-column: 2; grid-row: 2; width: 100%"
+        >
+          A gallery.
+        </div>
+      </div>
+      <div
+        class="container mt-3"
+        style="display: grid; grid-template-columns: 10% 90%; grid-gap: 20px"
+      >
+        <div
+          class="bg-white text-black"
+          style="
+            align-items: center;
+            border-radius: 50%;
+            display: flex;
+            font-size: x-large;
+            font-weight: 700;
+            grid-column: 1;
+            grid-row: 1;
+            height: 75px;
+            justify-content: center;
+            width: 75px;
+          "
+        >
+          1
+        </div>
+        <div
+          class="text-light"
+          style="border-radius: 8px; grid-column: 2; grid-row: 1; width: 100%"
+        >
+          <h2>Making change easier</h2>
+          <p>
+            Our bookings can be changed without charge and most rates are able
+            to be canceled without penalty.
+          </p>
+        </div>
+      </div>
+      <div
+        class="container mt-3"
+        style="display: grid; grid-template-columns: 90% 10%; grid-gap: 20px"
+      >
+        <div
+          class="text-light"
+          style="border-radius: 8px; grid-column: 1; grid-row: 1; width: 100%"
+        >
+          <h2>Your health, safety, and well-being</h2>
+          <p>
+            All our hotels are required to adhere to comprehensive health and
+            safety procedures including all local laws.
+          </p>
+        </div>
+        <div
+          class="bg-white text-black"
+          style="
+            align-items: center;
+            border-radius: 50%;
+            display: flex;
+            font-size: x-large;
+            font-weight: 700;
+            grid-column: 2;
+            grid-row: 1;
+            height: 75px;
+            justify-content: center;
+            width: 75px;
+          "
+        >
+          2
+        </div>
+      </div>
+      <div
+        class="container mt-3"
+        style="display: grid; grid-template-columns: 10% 90%; grid-gap: 20px"
+      >
+        <div
+          class="bg-white text-black"
+          style="
+            align-items: center;
+            border-radius: 50%;
+            display: flex;
+            font-size: x-large;
+            font-weight: 700;
+            grid-column: 1;
+            grid-row: 1;
+            height: 75px;
+            justify-content: center;
+            width: 75px;
+          "
+        >
+          3
+        </div>
+        <div
+          class="text-light"
+          style="border-radius: 8px; grid-column: 2; grid-row: 1; width: 100%"
+        >
+          <h2>Flexible Plans</h2>
+          <p>
+            Flexible booking options help you amend your plans as things change.
+          </p>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
