--- a/pages/signin/signin.html
+++ b/pages/signin/signin.html
@@ -88,23 +88,25 @@
       </ul>
     </header>
     <main class="main">
-      <form class="paper">
+      <form class="paper" id="signin-form">
         <h3 class="paper-label">Sign in</h3>
         <div class="form-group">
-          <label for="formGroupExampleInput2">Email</label>
+          <label for="email">Email</label>
           <input
             type="text"
             class="form-control"
-            id="formGroupExampleInput2"
+            id="email"
+            name="email"
             placeholder="asset.kazkenov@gmail.com"
           />
         </div>
         <div class="form-group">
-          <label for="formGroupExampleInput2">Password</label>
+          <label for="password">Password</label>
           <input
             type="password"
             class="form-control"
-            id="password1"
+            name="password"
+            id="password"
             placeholder="password"
           />
         </div>
