auth.js, html navbar for usernames

--- a/backend/hotel/src/main/resources/public/index.html
+++ b/backend/hotel/src/main/resources/public/index.html
@@ -47,69 +47,71 @@
               type="image/x-icon" />
     </head>
 
-    <body class="bg-black">
-        <header class="header">
-            <div class="logo">
-                <a href="./index.html"
-                   class="white">Voyage Inn</a>
-            </div>
-            <ul>
-                <li>
-                    <a href="./index.html"
-                       class="active link mr-2">Home</a>
-                </li>
-                <li>
-                    <a href="./pages/overview/overview.html"
-                       class="link mr-2">Overview</a>
-                </li>
-                <li>
-                    <a href="./pages/offers/offers.html"
-                       class="link mr-2">Offers</a>
-                </li>
-                <li>
-                    <a href="./pages/contact-us/contact-us.html"
-                       class="link mr-2">Contact us</a>
-                </li>
-                <div class="flex">
-                    <li>
-                        <a href="./pages/signup/signup.html"
-                           class="link blue">Join</a>
-                    </li>
-                    <span
-                          style="color: white; margin: 0 4px">|</span>
-                    <li>
-                        <a href="./pages/signin/signin.html"
-                           class="link blue">Sign in</a>
-                    </li>
-                </div>
-            </ul>
-        </header>
-        <main class="main">
-            <div class="section-1">
-                <div class="search-box">
-                    <h3 class="h3 mb-1">Make a reservation
-                    </h3>
-                    <form class="flex center between"
-                          method="POST">
-                        <div class="search-field">
-                            <div class="field-box left-border"
-                                 data-toggle="modal"
-                                 data-target="#destinationModal">
-                                <img src="static/icons/destination.svg"
-                                     alt="destination"
-                                     class="icon" />
-                                <span>Destination</span>
-                                <img src="static/icons/arrow-down.svg"
-                                     alt="arrow"
-                                     class="icon-2" />
-                            </div>
-                            <div id="check-in"
-                                 class="field-box">
-                                <img src="static/icons/calendar.svg"
-                                     alt="calendar"
-                                     class="icon" />
-                                <div>
-                                    <span style="
+  <body class="bg-black">
+    <header class="header">
+      <div class="logo">
+        <a href="./index.html" class="white">Voyage Inn</a>
+      </div>
+      <ul>
+        <li>
+          <a href="./index.html" class="active link mr-2">Home</a>
+        </li>
+        <li>
+          <a href="./pages/overview/overview.html" class="link mr-2"
+            >Overview</a
+          >
+        </li>
+        <li>
+          <a href="./pages/offers/offers.html" class="link mr-2">Offers</a>
+        </li>
+        <li>
+          <a href="./pages/contact-us/contact-us.html" class="link mr-2"
+            >Contact us</a
+          >
+        </li>
+        <div class="flex-center">
+          <li>
+            <a href="./pages/signup/signup.html" class="link blue">Join</a>
+          </li>
+          <span style="color: white; margin: 0 4px">|</span>
+          <li>
+            <a href="./pages/signin/signin.html" class="link blue">Sign in</a>
+          </li>
+        </div>
+      </ul>
+    </header>
+    <main class="main">
+      <div class="section-1">
+        <div class="search-box">
+          <h3 class="h3 mb-1">Make a reservation</h3>
+          <div class="flex center between">
+            <div class="search-field">
+              <div
+                class="field-box left-border"
+                data-toggle="modal"
+                data-target="#destinationModal"
+              >
+                <img
+                  src="static/icons/destination.svg"
+                  alt="destination"
+                  class="icon"
+                />
+                <span>Destination</span>
+                <img
+                  src="static/icons/arrow-down.svg"
+                  alt="arrow"
+                  class="icon-2"
+                />
+              </div>
+              <div id="check-in" class="field-box">
+                <img
+                  src="static/icons/calendar.svg"
+                  alt="calendar"
+                  class="icon"
+                />
+                <div>
+                  <span
+                    style="
                       display: inline-block;
                       margin-bottom: 2rem;
                       color: rgb(39, 38, 38);
