--- a/backend/hotel/src/main/resources/public/pages/account/dc-account.html
+++ b/backend/hotel/src/main/resources/public/pages/account/dc-account.html
@@ -51,7 +51,7 @@
     <title>Account</title>
     <link
       rel="shortcut icon"
-      href="/Software-Engineering-Hotel-Chain/static/icons/voyage-inn.png"
+      href="../../static/icons/voyage-inn.png"
       type="image/x-icon"
     />
   </head>
@@ -63,59 +63,32 @@
       </div>
       <ul>
         <li>
-          <a
-            href="/Software-Engineering-Hotel-Chain/index.html"
-            class="link mr-2"
-            >Home</a
-          >
+          <a href="../../index.html" class="link mr-2">Home</a>
         </li>
         <li>
-          <a
-            href="/Software-Engineering-Hotel-Chain/pages/overview/overview.html"
-            class="link mr-2"
-            >Overview</a
-          >
+          <a href="../overview/overview.html" class="link mr-2">Overview</a>
         </li>
         <li>
-          <a
-            href="/Software-Engineering-Hotel-Chain/pages/offers/offers.html"
-            class="link mr-2"
-            >Offers</a
-          >
+          <a href="../offers/offers.html" class="link mr-2">Offers</a>
         </li>
         <li>
-          <a
-            href="/Software-Engineering-Hotel-Chain/pages/contact-us/contact-us.html"
-            class="link mr-2"
+          <a href="../contact-us/contact-us.html" class="link mr-2"
             >Contact us</a
           >
         </li>
-        <div class="flex">
-          <li>
-            <a
-              href="/Software-Engineering-Hotel-Chain/pages/signup/signup.html"
-              class="link"
-              >Join</a
-            >
-          </li>
-          <span style="color: white; margin: 0 4px">|</span>
-          <li>
-            <a
-              href="/Software-Engineering-Hotel-Chain/pages/signin/signin.html"
-              class="link"
-              >Sign in</a
-            >
-          </li>
+        <div id="user-name-link" class="flex-center">
+          <img
+            src="../../static/images/user.png"
+            alt="user"
+            class="user-img-navbar"
+          />
+          <span>User name</span>
         </div>
       </ul>
     </header>
     <main class="main">
       <div class="user-block">
-        <img
-          src="/Software-Engineering-Hotel-Chain/static/images/user.png"
-          alt="user"
-          class="user-img"
-        />
+        <img src="../../static/images/user.png" alt="user" class="user-img" />
         <div class="flex-column">
           <p class="p1">Desk clerk</p>
           <p class="p2">User name</p>
@@ -178,5 +151,5 @@
       </div>
     </main>
   </body>
-  <script src="main.js"></script>
+  <script src="../../main.js"></script>
 </html>
