--- a/backend/hotel/src/main/resources/public/pages/contact-us/contact-us.html
+++ b/backend/hotel/src/main/resources/public/pages/contact-us/contact-us.html
@@ -77,7 +77,7 @@
             >Contact us</a
           >
         </li>
-        <div class="flex">
+        <div class="flex-center">
           <li>
             <a href="../signup/signup.html" class="link blue">Join</a>
           </li>
