--- a/backend/hotel/src/main/resources/public/pages/offers/offers.html
+++ b/backend/hotel/src/main/resources/public/pages/offers/offers.html
@@ -70,7 +70,7 @@
                     <a href="../contact-us/contact-us.html"
                        class="link mr-2">Contact us</a>
                 </li>
-                <div class="flex">
+                <div class="flex-center">
                     <li>
                         <a href="../signup/signup.html"
                            class="link blue">Join</a>
