--- a/backend/hotel/src/main/resources/public/pages/overview/overview.html
+++ b/backend/hotel/src/main/resources/public/pages/overview/overview.html
@@ -78,7 +78,7 @@
             >Contact us</a
           >
         </li>
-        <div class="flex">
+        <div class="flex-center">
           <li>
             <a href="../signup/signup.html" class="link blue">Join</a>
           </li>
