finished auth process

--- a/backend/hotel/src/main/resources/public/pages/account/manager-account.html
+++ b/backend/hotel/src/main/resources/public/pages/account/manager-account.html
@@ -55,6 +55,7 @@
       type="image/x-icon"
     />
     <script src="../../auth.js"></script>
+    <script src="../../main.js"></script>
   </head>
 
   <body class="bg-black">
@@ -142,5 +143,4 @@
       </div>
     </main>
   </body>
-  <script src="main.js"></script>
 </html>
