--- a/backend/hotel/src/main/resources/public/pages/account/user-account.html
+++ b/backend/hotel/src/main/resources/public/pages/account/user-account.html
@@ -54,6 +54,7 @@
       href="../../static/icons/voyage-inn.png"
       type="image/x-icon"
     />
+    <script src="../../main.js"></script>
   </head>
 
   <body class="bg-black">
@@ -90,14 +91,14 @@
       <div class="user-block">
         <img src="../../static/images/user.png" alt="user" class="user-img" />
         <div class="flex-column">
-          <p class="p1">User</p>
-          <p class="p2">User name</p>
+          <p class="p1 usertype">User</p>
+          <p class="p2 username">User name</p>
         </div>
       </div>
       <div class="body">
         <h3>Personal Info</h3>
         <div class="section-1">
-          <div class="paper" style="width: 100%">
+          <div class="paper user-account" style="width: 100%">
             <div class="field"><span>Member number:</span><span>int</span></div>
             <div class="field"><span>Member number:</span><span>int</span></div>
             <div class="field"><span>Member number:</span><span>int</span></div>
@@ -169,5 +170,4 @@
       </div>
     </main>
   </body>
-  <script src="../../main.js"></script>
 </html>
