--- a/backend/hotel/src/main/resources/public/pages/offers/offers.html
+++ b/backend/hotel/src/main/resources/public/pages/offers/offers.html
@@ -45,6 +45,8 @@
         <link rel="shortcut icon"
               href="../../static/icons/voyage-inn.png"
               type="image/x-icon">
+  <script src="../../main.js"></script>
+
     </head>
 
     <body class="bg-black">
@@ -264,5 +266,6 @@
                 </div>
         </main>
     </body>
+
 
 </html>
