--- a/backend/hotel/src/main/resources/public/pages/account/dc-account.html
+++ b/backend/hotel/src/main/resources/public/pages/account/dc-account.html
@@ -98,7 +98,7 @@
       <div class="body">
         <h3>Personal Info</h3>
         <div class="section-1">
-          <div class="paper" style="width: 100%">
+          <div class="paper user-account" style="width: 100%">
             <div class="field"><span>Employee ID:</span><span>int</span></div>
             <div class="field"><span>Position:</span><span>int</span></div>
             <div class="field"><span>Member number:</span><span>int</span></div>
