--- a/backend/hotel/src/main/resources/public/index.html
+++ b/backend/hotel/src/main/resources/public/index.html
@@ -305,5 +305,7 @@
             </div>
     </body>
     <script src="main.js"></script>
-
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+    </style>
 </html>
