--- a/backend/hotel/src/main/resources/public/pages/account/manager-account.html
+++ b/backend/hotel/src/main/resources/public/pages/account/manager-account.html
@@ -57,11 +57,13 @@
     <script src="../../auth.js"></script>
     <script src="../../main.js"></script>
   </head>
-
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+    </style>
   <body class="bg-black">
     <header class="header">
       <div class="logo">
-        <a href="../../index.html" class="white">Voyage Inn</a>
+        <a href="../../index.html" style=" font-family: 'Playfair Display', serif;" class="white">Voyage Inn</a>
       </div>
       <ul>
         <li>
