--- a/backend/hotel/src/main/resources/public/pages/overview/overview.html
+++ b/backend/hotel/src/main/resources/public/pages/overview/overview.html
@@ -56,11 +56,13 @@
     />
     <script src="../../main.js"></script>
   </head>
-
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+    </style>
   <body class="bg-black">
     <header class="header">
       <div class="logo">
-        <a href="../../index.html" class="white">Voyage Inn</a>
+        <a href="../../index.html"  style=" font-family: 'Playfair Display', serif;" class="white">Voyage Inn</a>
       </div>
       <ul>
         <li>
@@ -100,17 +102,22 @@
           src="../../static/images/otwin0ycalthewjffpea 1.png"
           alt="Hotel pool and yard"
         />
-        <div
+         <div
           class="text-light"
-          style="border-radius: 8px; grid-column: 2; grid-row: 1; width: 100%"
+          style="border-radius: 8px; grid-column: 2; grid-row: 1; width: 80%"
         >
-          Info about the hotel chain. List of countries were we have hotels.
+        We aggregate the best possible deals for our users by connecting with over 100,000 hotels worldwide. 
+        As an independent travel network, we can get you the same deals you expect with a bigger travel agency or direct from the hotel.At Voyage Inn we pride ourselves in delivering warm and welcoming experiences for guests staying for business or pleasure.
+
+        Whether it is time with friends, family, colleagues or clients we have a breadth of hotels from urban centres to beach resorts offering environments, services and amenities that make it easy to work, rest and connect. 
+          
         </div>
+        
         <div
           class="text-light"
-          style="border-radius: 8px; grid-column: 2; grid-row: 2; width: 100%"
+          style="border-radius: 8px; grid-column: 2; grid-row: 2; width: 80%"
         >
-          A gallery.
+          The doors of our first hotel opened in 1952, and as more than a thousand properties have followed since, Voyage Inn has become one of the most iconic and trusted brands in the world.
         </div>
       </div>
       <div
